Issue #2362905 by Wuk: Fixed Google Geocoder widget zoom controls not visible.

--- a/css/geolocation-googlegeocoder-widget.css
+++ b/css/geolocation-googlegeocoder-widget.css
@@ -14,6 +14,11 @@
   width: 100%;
 }
 
+/* Fix Google Maps v3 controls */
+.geolocation-map-canvas .gmnoprint img {
+  max-width: none;
+}
+
 .geocode-controlls-wrapper {
   display: block;
   width: 100%;
